Fix vertical alignment of footer
The 'matplotlib' text is `h1`, so gets a 0.67em top margin, but it's 2em
font size, so for the normal font size text, we need to add a 1.33em
margin.

--- a/docs/_static/css/landing.css
+++ b/docs/_static/css/landing.css
@@ -377,6 +377,7 @@ ul.mpl-links,
 ul.release-docs {
   list-style-type: none;
   padding: 0;
+  margin-top: 1.33em;
 }
 
 ul.mpl-links li,
